minor edits to poster making instructions

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -833,12 +833,16 @@ are interested in attending a conference, and you aren't able to
 secure funding through non-lab sources, you should discuss your
 options with \director.
 
- \subsection{Poster Creation}
- There are many options for poster creation. One option is to create a 
- slide in Powerpoint, Keynote, or a similar application, and export to PDF 
- for printing. Sample/template posters, with the correct scale and resolution, 
- including both the Dartmouth seal and Contextual Dynamics Lab logo, 
- for powerpoint (.pptx) can be found \href{http}{here}. 
+ \subsection{Making a poster}
+ The preferred methods for creating posters are to use
+ \href{https://github.com/deselaers/latex-beamerposter}{LaTeX
+   BeamerPoster}, Adobe Illustrator, or
+ \href{https://inkscape.org/en/}{Inkscape}.  The lab has several
+ example poster templates on file, but these are not organized well
+ yet.  Your best bet is to ask \director~for an old poster and modify
+ it.  You can also create a file from scratch.  Ensure that any images
+ are either vector graphics, or bitmaps (.png, .jpeg, .tiff, etc.) at
+ sufficiently high resolutions (at least 300 dpi).
 
  \subsection{Poster printing}
  There are two on-campus poster printers.  One is in the Map Room of
