--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -723,7 +723,7 @@ experience, etc.
 interpersonal issue with another lab member and are having trouble
 resolving it on your own, please seek out assistance from \director,
 \coordinator, your Project Owner, your Project Coordinator, or one of
-the above Dartmouth community resources as early as possible.
+the Dartmouth community resources described below as early as possible.
 
 All lab members, regardless of position or status, are protected by
 (and must abide by) Dartmouth's human resources policies.  This means
