spell checked and minor edits

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -55,7 +55,7 @@
 \newlist{todolist}{itemize}{2}
 \setlist[todolist]{label=$\square$}
 
-\newcommand{\monthyear}{\ifcase\month\or January\or February\or March\or April\or May\or June\or July\or August\or September\or October\or November\or December\fi\space\number\year} % A command to print the current month and year
+\newcommand{\monthyear}{\ifcase\month\or January\or February\or March\or April\or May\or June\or July\or August\or September\or October\or November\or December\fi,\space\number\year} % A command to print the current month and year
 
 \newcommand{\openepigraph}[2]{ % This block sets up a command for printing an epigraph with 2 arguments - the quote and the author
 \begin{fullwidth}
@@ -237,7 +237,7 @@ certain rights, and you agree to take on certain responsibilities.
 \section{Your rights as a lab member}
 \begin{enumerate}
 \item You are entitled to a safe work environment free from
-  harrassment, abuse, violence, and discrimination in any form.
+  harassment, abuse, violence, and discrimination in any form.
   \item You are entitled to be supported and respected by all lab
     members.
   \item You are entitled to openly share your scientific ideas and
@@ -250,7 +250,7 @@ certain rights, and you agree to take on certain responsibilities.
 \section{Your responsibilities as a lab member}
 \begin{enumerate}
   \item You agree to contribute to a safe work environment, refrain
-    from behaviors that harrass, abuse, expose to violence, or
+    from behaviors that harass, abuse, expose to violence, or
     discriminate.
   \item You agree to support and respect all lab members, including
     yourself.
@@ -264,7 +264,7 @@ certain rights, and you agree to take on certain responsibilities.
     directly with the relevant parties (to the extent that you feel
     safe doing so).
   \item You agree to carry out your work with integrity and diligence,
-    adhearing to the highest possible standards of scientific
+    adhering to the highest possible standards of scientific
     excellence.
   \item You agree to utilize lab resources (including equipment,
     money, time, etc.) responsibly and sustainably.
@@ -276,7 +276,7 @@ certain rights, and you agree to take on certain responsibilities.
 \section{Recourse}
 If you feel your rights as a lab member have been, or are in danger of
 being, violated, it is your duty to report those violations to a
-senior staff member (e.g.\ \director, Department Chair, Deans, polics,
+senior staff member (e.g.\ \director, Department Chair, Deans, polices,
 Title IX coordinator, ombudsman, etc.).  Similarly, if you notice
 others endangering others' rights, or neglecting their
 responsibilities, it is your duty to report those violations to a
@@ -333,7 +333,7 @@ might try to plan out every part of a project in advance in a series
 of small steps.  We still try to break projects into tiny bite-sized
 chunks, but the key insight of the agile approach is that we only need
 to know what the \textit{next} chunk is, rather than attempting to
-forcast out over an extended timeline.  Although it's often helpful to
+forecast out over an extended timeline.  Although it's often helpful to
 have a general (if vague) sense of where things are going, we never
 actually need to know where the project will ultimately end up.  The
 goals and process are constantly evolving.  Perhaps the best
@@ -379,7 +379,7 @@ While there is value to the \textit{italicized} items, we value
   awesome science means keeping an open mind.  Your original goals and
   plans may no longer apply as your project progresses.  Your original
   hypotheses may be proven false.  Your assumptions may be
-  incompatable with your data.  Learn from these challenges and grow
+  incompatible with your data.  Learn from these challenges and grow
   with them.  Avoid getting ``stuck'' by refusing to change.
 
 \item Deliver research products frequently, from a couple of weeks to
@@ -588,7 +588,7 @@ are not normally co-authors.
     researcher), discuss with \director~at the beginning of each term
     one thing that you can present at a lab meeting.  Junior lab
     members (undergraduates) are not obligated to present at lab
-    meetings, but may shedule a time to do so upon request by
+    meetings, but may schedule a time to do so upon request by
     coordinating with \director.  Exception: if you are presenting
     your work outside of the lab, and if it is the first time you are
     presenting that project, you \textit{must} do a practice talk for
@@ -612,7 +612,7 @@ meetings:
   Attendees: all project team members, and any other interested active
   lab members.  Subscribe
   to calendar \href{https://calendar.google.com/calendar?cid=NXRhNTBjZnY0dWloMGEwazhtMmRpOWRoam9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{here}.
-  \item \textbf{Hackathons.}  We occassionally organize hackathon
+  \item \textbf{Hackathons.}  We occasionally organize hackathon
     style events whereby spontaneously organized groups work towards
     one or more very short term projects or goals.  These are
     scheduled on an \textit{ad hoc} basis.  Attendees: all interested
@@ -702,7 +702,7 @@ Depending on the protocol, you may need to complete one or more online
 training courses to become certified to run your experiment.  If no
 existing protocol is appropriate for your study, discuss with
 \director~whether it would be appropriate to create a new protocol or
-submit an ammendment for an existing protocol.
+submit an amendment for an existing protocol.
     \item Create an initial set of short-term action items for kicking
       off your project and post them to your project's Slack channel.
 \end{enumerate}
@@ -755,7 +755,7 @@ DHMC.
   \item We use the
   \href{https://calendar.google.com/calendar/ical/dgcv8l8a8s10hfg2s5h0qec0q0\%40group.calendar.google.com/private-4810aed94f818d5748045447ab46c62d/basic.ics}{CDL
     resources calendar} to coordinate the use of shared rooms and
-  equipment, such as testing rooms, our EEG systems, eyetracker, hospital
+  equipment, such as testing rooms, our EEG systems, eye-tracker, hospital
   equipment, software licenses, etc.
   \item You may also choose to create project-specific
   Google Calendars, inviting project team members.  When you add an
@@ -1092,7 +1092,7 @@ need access to RAPPORT then let \director~know.
    the lab or via Amazon Mechanical Turk.  The protocol also covers
    fitness-related studies (e.g.\ incorporating fitness tracker data
    and other on-body and remote biosensors including scalp EEG and
-   eyetrackers, and/or performing physical tasks like riding on a
+   eye-trackers, and/or performing physical tasks like riding on a
    stationary bicycle or running in place).
     \item \textbf{fMRI Efficient Learning (STUDY00030020).}  Analog of
       the Efficient Learning protocol, but allows for fMRI data
@@ -1108,13 +1108,13 @@ need access to RAPPORT then let \director~know.
  \section{List of inactive protocols}
  \begin{enumerate}
    \item \textbf{EEG Efficient Learning (STUDY00029881).} Analog of
-     the Efficient Learnign protocol, but allows for scalp EEG data
+     the Efficient Learning protocol, but allows for scalp EEG data
      collection.  This protocol is redundant with the revised
      Efficiently Learning protocol, which now allows for scalp EEG
      data collection as well.
    \end{enumerate}
 
-   \chapter{Signature page}
+   \chapter{Checklist and signature page}
    By signing below, I certify that I have completed the following tasks:
 \begin{todolist}
 \item I am proficient in \LaTeX or have completed a \LaTeX tutorial,
