added some additional information about lab policies

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -165,11 +165,13 @@ Copyright \copyright\ \the\year\ \thanklessauthor
 \cleardoublepage
 \chapter{Introduction}\label{ch:intro} % Adding an asterisk leaves out this chapter from the table of contents
 This lab manual is intended to provide a crash course in doing
-research in the Contextual Dynamics Lab.  It introduces our general research
-approach and some basic lab policies.  The manual also describes your
-rights and responsibilities as a member of the lab.
+research in the Contextual Dynamics Lab.  It describes your rights and
+responsibilities as a member of the lab.  The manual also introduces
+our general research approach and lab policies.
 
-\newthought{Who is this lab manual for?}  \marginnote{\texttt{TASK:}
+\newthought{Who is this lab manual for?}
+
+\noindent \marginnote{\texttt{TASK:}
   Upon reading through this lab manual for the first time, please make
   at least one edit.  You could correct a typo, clarify something
   that's unclear, add a comment via the \href{https://github.com/ContextLab/lab-manual/issues}{GitHub issues page}, etc.  Importantly, be sure to submit
@@ -182,10 +184,13 @@ as needed.  Periodically throughout the document, you will see margin
 notes with listed \texttt{TASK} items.  Completing your read through
 entails: (a) reading the contents of the manual, (b) asking current
 lab members about any confusing aspects, and (c) completing the
-relevant \texttt{TASK} items.
+relevant \texttt{TASK} items.  You will also see non-task
+\texttt{NOTE} items; these provide helpful tips and additional
+commentary on the nearby text.
 
 \newthought{What should you do if you don't understand something?}
-\marginnote{\texttt{TASK:} If you haven't used \LaTeX~before (i.e.,
+
+\noindent \marginnote{\texttt{TASK:} If you haven't used \LaTeX~before (i.e.,
   the document formatting language in which this manual is written),
   you'll want to take a look at
   \href{https://www.latex-tutorial.com/tutorials/quick-start/}{this
@@ -219,7 +224,8 @@ way that we think will best allow you to achieve your objectives.
 \textit{Learn from it}, \textit{challenge it}, and \textit{add to it}.
 
 \newthought{What ``isn't'' this lab manual?}
-This lab manual is
+
+\noindent This lab manual is
 \textit{not} intended to provide a comprehensive overview of
 everything you need to know to do your research projects.  As
 described next, you may not even \textit{know} what you need to know
@@ -232,9 +238,13 @@ covered by the existing set of tutorials, please consider contributing
 a tutorial of your own once you've figured things out!
 
 \chapter{Bill of rights and responsibilities}\label{ch:billofrights}
+\marginnote{\texttt{TASK:} Read
+  \href{https://www.sciencemag.org/careers/2018/11/what-can-we-learn-dartmouth}{this
+    letter} about defining and characterizing boundaries between lab
+  members and noticing unhealthy norms.}
 As a member of the Contextual Dynamics Lab, you are entitled to
 certain rights, and you agree to take on certain responsibilities.
-\section{Your rights as a lab member}
+\newthought{Your rights as a lab member}
 \begin{enumerate}
 \item You are entitled to a safe work environment free from
   harassment, abuse, violence, and discrimination in any form.
@@ -247,7 +257,7 @@ certain rights, and you agree to take on certain responsibilities.
     ideas.
 \end{enumerate}
 
-\section{Your responsibilities as a lab member}
+\newthought{Your responsibilities as a lab member}
 \begin{enumerate}
   \item You agree to contribute to a safe work environment, refrain
     from behaviors that harass, abuse, expose to violence, or
@@ -273,8 +283,9 @@ certain rights, and you agree to take on certain responsibilities.
     areas (couch, sink, testing rooms, etc.).
 \end{enumerate}
 
-\section{Recourse}
-If you feel your rights as a lab member have been, or are in danger of
+\newthought{Recourse}
+
+\noindent If you feel your rights as a lab member have been, or are in danger of
 being, violated, it is your duty to report those violations to a
 senior staff member (e.g.\ \director, Department Chair, Deans, polices,
 Title IX coordinator, ombudsman, etc.).  Similarly, if you notice
@@ -315,8 +326,9 @@ training and career potential.  To do this, the Contextual Dynamics
 Lab practices \textbf{agile research}, as described in the next section.
 
 %\newpage
-\section{Doing agile research}
-The agile approach to research we use in the Contextual Dynamics Lab
+\newthought{Doing agile research}
+
+\noindent The agile approach to research we use in the Contextual Dynamics Lab
 is inspired by the \href{http://scrumtrainingseries.com/}{Agile
   Movement} in the software development world.  The idea is to create
 learning, adaptable teams to work on very small bite-sized tasks.
@@ -493,12 +505,125 @@ While there is value to the \textit{italicized} items, we value
   \end{itemize}
 \end{enumerate}
 
+\newthought{Papers}
+
+\noindent Research papers are the primary research output of our lab.
+Publications are the ``currency of academia,'' in that they are
+central to career advancement.  With each allocation of lab resources
+(equipment, money, time) we should be asking ourselves how this
+contributes to a paper.
+
+\subsection{General procedure}
+All lab papers should be coordinated with \director.  A paper starts
+with a discussion about:
+\begin{enumerate}
+\item What the paper is going to be about
+\item What the key results are
+\item What the overall ``story'' is
+\item The current status of the various components of the project
+  (e.g.\ data collection, analyses, figures, interpretation,
+  literature review, etc.)
+\item Who is a potential candidate for authorship on the paper
+\end{enumerate}
+
+\subsection{Authorship guidelines}
+\marginnote{\texttt{TASK:} review the
+  \href{https://oir.nih.gov/sites/default/files/uploads/sourcebook/documents/ethical_conduct/guidelines-authorship_contributions.pdf}{NIH
+    Guidelines for Authorship}.}  The Contextual Dynamics Lab follows
+the
+\href{https://oir.nih.gov/sites/default/files/uploads/sourcebook/documents/ethical_conduct/guidelines-authorship_contributions.pdf}{NIH
+  Guidelines for Authorship} in considering whether your contribution
+to a project merits authorship on the paper.  If you have made a
+non-trivial contribution to a project but did not meet the
+requirements for authorship, you will instead receive a citation in
+the acknowledgements section of the paper.  In general, you likely meet the
+requirements for authorship if you contributed in any of the following
+ways:
+\begin{enumerate}
+\item Drafted the manuscript (this warrants first authorship)
+\item Came up with the idea or made other substantial intellectual
+  contributions that meaningfully shaped the trajectory of the project
+\item Carried out an original experimental study (e.g.\ that you
+  designed or implemented)
+\item Carried out non-trivial data analyses (e.g.\ more complicated
+  than $t$-tests)
+\item Contributed novel tools or resources to the project that haven't
+  been published yet.
+\end{enumerate}
+
+\marginnote{\texttt{NOTE:} Conference posters and abstracts generally
+  have substantially less stringent authorship requirements than
+  formal papers.  The general rule of thumb for posters is that all
+  project team members should be co-authors.}
+You are unlikely to meet the requirements for authorship if your
+contributions were limited to the following:
+\begin{enumerate}
+  \item Running experimental participants for an already-designed and
+    coded-up study
+  \item Running trivial data analyses (e.g.\ $t$-tests or similar)
+  \item Getting trained by one of the other project members on a
+    project-related task
+  \item Training another project member on a project-related task
+  \item Sharing already-published tools or resources.
+  \item Editing or commenting on a draft of the manuscript.
+\end{enumerate}
+
+The final determination for who will be an author on each lab paper
+(and in what order) will be made by \director, following open
+discussions with project team members.
+
+\newthought{Making mistakes}
+
+\noindent The work we do is complicated, and mistakes happen.  When
+you notice a mistake (a bug, misinterpretation, mislabeling, or any
+other error), it is critical that you report the mistake immediately.
+Whereas mistakes are unavoidable in science, negative impacts can be
+minimized by fostering a workplace where reporting mistakes is
+celebrated and accepted as part of the natural course of getting
+things done.  Mistakes are opportunities to learn and grow, and
+identifying or noticing mistakes should be celebrated as part of our
+growth as scientists.  However, real harm can come from failing to
+report mistakes soon enough.  There is a Chinese proverb that says
+``the best time to plant a tree was 20 years ago; the second best time
+is now.''  Analogously, the best time to identify and correct a
+mistake may have been in the past-- but the second best time is right now!
+
+Example scenarios (not an exhaustive list):
+\begin{enumerate}
+  \item You've shared a figure, statistic, or other result, and
+    you've realized there's a bug in your code.  
+  \item You tried to collect some data and the experiment crashed or
+    yielded corrupted data.
+  \item You're re-reading a paper that you shared, and you notice a
+    mistake or typo.
+  \item You made a plan with your project team and you realized it's
+    flawed in some way, or that there's potentially a better solution
+    or approach.
+  \item You released a software package and you've found a bug or error.
+\end{enumerate}
+
+Appropriate actions for each of the above scenarios (this should
+happen immediately after you notice the mistake):
+\begin{enumerate}
+\item Double check, to the best of your ability, that the mistake is
+  real.  This may involve checking over code, rebooting a computer and
+  restarting an experiment, re-reading reference text, etc.
+\item Create a GitHub issue describing the problem.  Provide
+  information about how to reproduce the problem (if applicable), the
+  expected behavior, and the observed behavior.  Also provide any
+  relevant system or environment information that may be necessary for
+  reproducing the problem (e.g. details of the computing environment).
+\item Coordinate over Slack with your project team to formulate an
+  action plan.
+\item Ask other lab members for help if the course of action isn't
+  clear.  Also try Google and/or Stack Exchange.
+\end{enumerate}
 
 
 
+\newthought{Project roles}
 
-\subsection{Projects roles}
-Every project has four possible roles.  You will play one or more of
+\noindent Every project has four possible roles.  You will play one or more of
 these roles on your project:
 \begin{enumerate}
 \item \textbf{Project Owner.}  This is the person responsible for
@@ -582,8 +707,9 @@ are not normally co-authors.
 \end{enumerate}
 
 
-\subsection{Meetings}
-\marginnote{\texttt{TASK}: If you are a senior
+\newthought{Meetings}
+
+\marginnote{\texttt{TASK:} If you are a senior
     lab member (lab manager, grad student, or postdoctoral
     researcher), discuss with \director~at the beginning of each term
     one thing that you can present at a lab meeting.  Junior lab
@@ -593,7 +719,7 @@ are not normally co-authors.
     your work outside of the lab, and if it is the first time you are
     presenting that project, you \textit{must} do a practice talk for
     the lab (regardless of whether you are a junior or senior lab member).}
-Effective lab communication requires forums for communicating.  As
+\noindent  Effective lab communication requires forums for communicating.  As
 described below, we use \href{http://www.slack.com}{Slack} to
 facilitate non-in-person communications, but Slack cannot replace
 in-person meetings.  In fact, our approach is set up to encourage
@@ -618,7 +744,15 @@ meetings:
     scheduled on an \textit{ad hoc} basis.  Attendees: all interested
     lab members, any interested member of the Dartmouth community,
     external collaborators.  Subscribe
-  to calendar \href{https://calendar.google.com/calendar?cid=NXRhNTBjZnY0dWloMGEwazhtMmRpOWRoam9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{here}.
+  to calendar
+  \href{https://calendar.google.com/calendar?cid=NXRhNTBjZnY0dWloMGEwazhtMmRpOWRoam9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{here}.
+  \marginnote{\texttt{TASK:} Each term, sign up for a beginning-of-term or
+    end-of-term meeting time with \director via \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.}
+  \item \textbf{Beginning-of-term and end-of-term meetings.} At the
+    start or end of each term, you should schedule a 30 minute
+    meeting slot with \director to discuss your research
+    plans, progress, goals, etc.  It is your responsibility to sign up
+    for a slot via \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.
   \item \textbf{Department talks and colloquia.} Each week the
     Department of Psychological and Brain Sciences invites internal
     and external researchers to present on a wide variety of research
@@ -626,10 +760,37 @@ meetings:
     Attendees: all interested lab and non-lab Dartmouth community
     members.  Subscribe to calendar
     \href{https://calendar.google.com/calendar?cid=bXAxYnVqYjM5dWQ1YmdtbW5xOXI4ZGJpdWtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{here}.
+    \marginnote{\texttt{TASK:} If you are a paid lab employee, or if
+      you would like to submit weekly snippets, email \director to get
+      added to the Howdy script.}
+    \item \textbf{Howdy weekly snippets.} Each week (via Slack), all
+      paid employees must fill out a ``weekly snippet'' with brief
+      answers to the following questions:
+      \begin{enumerate}
+      \item What did you work on last week?
+      \item What do you plan to work on this upcoming week?
+      \item What is impeding your progress?
+      \item Do you want to set up a meeting with \director?  (If so, a
+        link is provided to schedule a meeting via YouCanBook.Me.)
+      \end{enumerate}
+      Whereas weekly snippets are required for all paid employees,
+      they are optional for all other lab members.  To be added to the
+      weekly snippet schedule, email \director.  Being added to the
+      weekly snippet schedules means that you will receive a link via
+      the ``Howdy'' survey bot (through Slack) each Monday at 9am.
+      Your answers are then compiled into reports that I receive each
+      Tuesday at the end of the day (5pm).  If you are an unpaid
+      employee but are likely to request a letter of recommendation,
+      weekly snippets are a good way for me to maintain a detailed
+      sense of what you are working on from week to week and how you
+      are progressing over time.  (Virtual) attendees: all paid lab
+      members and any other lab members who want to participate.
 \end{enumerate}
   
 %\newpage
-\section{Getting started in the lab}
+\newthought{Getting started in the lab}
+
+\noindent 
 \marginnote{\texttt{TASK:} Create (free) Google, Trello, and GitHub
   accounts.  Send your addresses and/or usernames to \coordinator
   (cc'ing \director) so that you can be added to the lab groups.  Also
@@ -661,11 +822,23 @@ accomplish various necessary administrative tasks:
   want to release to the public, and/or anything that multiple lab
   members will be collaborating on.  Each project has one or more
   GitHub repositories.
-  \item \href{https://1password.com/}{\textbf{1Password.}} This
-      platform is used by senior lab members to manage secure notes
-      and passwords (e.g.\ shared software licenses, card numbers and
-      chart strings, etc.).  Request an invite from \director~in order
-      to be added to the lab 1password account.
+\item \href{https://1password.com/}{\textbf{1Password.}}
+  \marginnote{\texttt{TASK:} If you are a senior lab member, request a
+    1Password invite from \director.} This platform is used by senior
+  lab members to manage secure notes and passwords (e.g.\ shared
+  software licenses, card numbers and chart strings, etc.).  Request
+  an invite from \director~in order to be added to the lab 1password
+  account.
+\item \href{http://www.context-lab.com/}{\textbf{Lab website.}}
+  \marginnote{\texttt{TASK:} Submit a photograph (of yourself or some
+    other picture or image that you want to represent you) and brief
+    2-3 sentence biography to \coordinator~so that you can be added to
+    the \href{http://www.context-lab.com/people/}{people page} on the
+    website.  Alternatively, if you do not wish to be included on the
+    website, send a note to \coordinator~expressing that you do not
+    want to be added to the website.} We use the lab website to
+  distribute research materials, describe ongoing work, and provide
+  information about our work.
 \end{enumerate}
 
 Once you've created those accounts, you can ask any questions through
@@ -679,8 +852,19 @@ and/or how many projects you are expecting to interface with.  If you
 feel you don't have the appropriate account type, please communicate
 your concerns to \director.
 
+\newthought{Miscellaneous administrata}
 
-\section{Starting a new project}
+\noindent You can pick up a lab key from Michelle Powers (Moore Hall
+administrative office) by
+\href{mailto:Michelle.A.Powers@dartmouth.edu}{emailing her} and cc'ing
+\director.  You will need to pay a \$5 deposit, which will be returned
+to you when you return your key at the end of your tenure in the lab.
+
+
+
+\newthought{Starting a new project}
+
+\noindent 
 Our lab uses a number of project management tools and policies to
 promote continuity across projects and lab members.  First, make sure
 that your project doesn't already exist (generally this involves
@@ -709,8 +893,9 @@ submit an amendment for an existing protocol.
 
 
 %\newpage
-\section{Joining a project}
-To join a project, simply subscribe to the project's Slack channel and
+\newthought{Joining a project}
+
+\noindent To join a project, simply subscribe to the project's Slack channel and
 GitHub repository.  All project communications should either be
 summarized on Slack or occur through Slack, whenever possible.  This
 keeps notes searchable and visible to all team members (except direct
@@ -733,8 +918,9 @@ want to divide you time across multiple projects, you should
 coordinate this with \director, \coordinator, and your team members.
 
 
-\section{Scheduling}
-\marginnote{\texttt{TASK:} email \coordinator~to request invites to each of the calendars below.}
+\newthought{Scheduling}
+
+\noindent \marginnote{\texttt{TASK:} email \coordinator~to request invites to each of the calendars below.}
 Our lab's scheduling practices and policies are intended to facilitate
 lab member interactions between ourselves, our collaborators, and our
 experimental participants.  There are three basic tools the lab uses
@@ -749,6 +935,12 @@ to organize and schedule events:
   \item We use the \href{https://calendar.google.com/calendar/ical/j6noo2tqahpsoq9na1h16paf3s\%40group.calendar.google.com/private-c3d75bea1ab4605947353d159d3dcd05/basic.ics}{DHMC events
   calendar} to keep track of important events and meetings at the
 DHMC.
+\marginnote{\texttt{TASK:} If you are an undergraduate, please add your
+  schedule to the CDL class schedule calendar at the beginning of each term.}
+\item We use the
+  \href{https://calendar.google.com/calendar?cid=djJzZWxvbWc0bzZhb2J1YTdnOTIyYWFtcWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ}{CDL
+  class schedule calendar} to keep track of course
+schedules of undergraduates.
 \item We use the \href{https://calendar.google.com/calendar/ical/h1j06dohcg7v1g2o5tkb7ijhvs\%40group.calendar.google.com/private-239aaf8b4dc60480c90e8d7fc353e229/basic.ics}{out-of-lab calendar} to keep track of known
   absences (e.g. illness, travel, holidays,
   etc.).
@@ -810,7 +1002,7 @@ If you know that you'll be unable to meet any of these general
 attendance guidelines, please coordinate with \director~to make
 appropriate arrangements.  \textbf{With the above in mind, we abide by
   a ``common sense'' attendance policy that relies on an honor
-  system.}\marginnote{\texttt{TIP:} If you are a (paid) hourly
+  system.}\marginnote{\texttt{TASK:} If you are a (paid) hourly
   employee, you'll need to track your hours using the Kronos system.
   \coordinator~can help get you set up with that system.}  If you
 cannot attend a lab event or meeting, your privacy will be respected:
@@ -926,8 +1118,9 @@ provides confidential and informal assistance in resolving concerns
 related to interpersonal issues.
 
 
- \section{Lab resources}
- As with most academic research labs, we (sadly!) must conduct our
+ \newthought{Lab resources}
+
+\noindent  As with most academic research labs, we (sadly!) must conduct our
  research within a limited research budget.  In practice, the
  important thing is to communicate with \director~before you spend (or
  commit to spending) lab funds.
@@ -987,7 +1180,7 @@ repository includes
  should be reported immediately.
 
  \subsection{Travel policy}
- \marginnote{\texttt{NOTE}: To obtain funding for a scientific
+ \marginnote{\texttt{NOTE:} To obtain funding for a scientific
    conference, \textit{prior to submitting your abstract}, you must
    (a) briefly describe or discuss how attending the conference fits
    in with your goals and/or plans, (b) provide confirm that you have
@@ -1029,7 +1222,7 @@ secure funding through non-lab sources, you should discuss your
 options with \director.
 
  \subsection{Making a poster}
- \marginnote{\texttt{NOTE}: If you commit to presenting a poster at a
+ \marginnote{\texttt{NOTE:} If you commit to presenting a poster at a
    scientific conference, you agree to prepare a complete draft of
    your poster \textit{at least two weeks in advance} of the
    conference, and to complete a final draft of your poster (that
@@ -1067,11 +1260,17 @@ All costs related to lab publications will be fully covered by the
 lab.  \coordinator~can help facilitate these payments.
 
  \subsection{Subject payments}
- Subject payments for lab research projects will be fully covered by
+ Most in-lab experimental subjects will be paid via t-points.
+ Coordinate with \coordinator~in order to receive a t-point allocation
+ well in advance of the start of the term you wish to run
+ participants.
+
+ Cash subject payments for lab research projects will be fully covered by
  the lab.  Subject payment guidelines are generally found in the IRB
  approval documentation relevant to your project.  For Mechanical Turk
  experiments, a subject payments budget should be approved prior to
- beginning the experiment.
+ beginning the experiment.  Cash payments may be made via petty cash,
+ which is managed by \coordinator.
 
 
 \chapter{Internal Review Board (IRB) approvals}
@@ -1085,7 +1284,8 @@ coordinated through
 is accessed directly by \director~or \coordinator, but if you feel you
 need access to RAPPORT then let \director~know.
 
- \section{List of active protocols}
+ \newthought{List of active protocols}
+
  \begin{enumerate}
  \item \textbf{Efficient Learning (STUDY00029685).}  Used for all
    behavioral learning and memory experiments for participants run in
@@ -1105,7 +1305,7 @@ need access to RAPPORT then let \director~know.
       via electrocorticographic activity in epilepsy patients.
    \end{enumerate}
 
- \section{List of inactive protocols}
+ \newthought{List of inactive protocols}
  \begin{enumerate}
    \item \textbf{EEG Efficient Learning (STUDY00029881).} Analog of
      the Efficient Learning protocol, but allows for scalp EEG data
@@ -1114,19 +1314,37 @@ need access to RAPPORT then let \director~know.
      data collection as well.
    \end{enumerate}
 
+   When you run an experimental participant, you must have them sign a
+   consent form.  After each day of testing (or more frequently), you
+   should give all signed consent forms to \coordinator.  Consent
+   forms are kept in a locked file cabinet in \director 's office.
+
+   All experimental data must be stored securely, as per IRB
+   guidelines.  All lab computers employ disk encryption and password
+   protection.  If you need to copy unpublished data onto a non-lab
+   computer, you need to verify (by checking in with \director) that
+   your computer satisfies our data security requirements.  \textit{No
+   personally identifiable data about our participants may ever be
+   shared outside of the lab.}
+
    \chapter{Checklist and signature page}
    By signing below, I certify that I have completed the following tasks:
 \begin{todolist}
-\item I am proficient in \LaTeX or have completed a \LaTeX tutorial,
-  allowing me to edit and understand this lab manual's source code.
+\item I am proficient in \LaTeX, allowing me to edit and understand
+  this lab manual's source code.
 \item I have submitted one or more edits to the lab manual by making a
-  pull request via the
+  pull request or adding an issue via the
   \href{https://github.com/ContextLab/lab-manual}{GitHub repository}.
-\item I have joined the lab's Slack account and agree to check it
-  regularly (at least once per normal business day, excluding days I
-  mark on the out-of-lab calendar).
+  \item I have read \href{https://www.sciencemag.org/careers/2018/11/what-can-we-learn-dartmouth}{Leah Somerville's commentary} on speaking
+    out in toxic or abusive environments.
+  \item I have reviewed the
+    \href{https://oir.nih.gov/sites/default/files/uploads/sourcebook/documents/ethical_conduct/guidelines-authorship_contributions.pdf}{NIH
+      guidelines for authorship}.
+  \item I agree to set up a beginning-of-term or end-of-term meeting
+    with \director~at least once per term.
   \item I have coordinated with \director~about getting added to the
     weekly snippets Howdy script.
+
   \item I have obtained access to the following lab calendars:
     Contextual Dynamics Lab, Out of lab, CDL Resources, CDL class
     schedule (if applicable), DHMC Meetings (if
@@ -1136,18 +1354,23 @@ need access to RAPPORT then let \director~know.
     the GitHub tutorials.
   \item I have created a Trello account and have been added to the lab
     Trello group.
+       \item I have joined the lab's Slack account and agree to check it
+  regularly (at least once per normal business day, excluding days I
+  mark on the out-of-lab calendar).
   \item I have been added to the lab's 1password account if I am a
-    senior lab member, or I am a junior lab member.
+    senior lab member, or I have not been added because I am a junior
+    lab member.
+    \item I have submitted a photograph (of myself, or a
+    representative scene or object) along with a brief (2-3 sentence)
+    professionally worded biography, to be included on the lab
+    website.  Alternatively, I have coordinated with \coordinator~to indicate my
+    preference to not be included on the lab website.
   \item I agree to regularly attend lab meetings (unless I have a course
     conflict and have informed \director~or \coordinator).
   \item I am either an unpaid or salaried employee, or I am an hourly
     employee and have gotten myself set up on Kronos to track my paid
     hours.
-  \item I have submitted a photograph (of myself, or a
-    representative scene or object) along with a brief (2-3 sentence)
-    professionally worded biography, to be included on the lab
-    website-- or I have coordinated with \coordinator~to indicate my
-    preference to not be included on the lab website.
+
   \item I agree to abide by the lab's Bill of rights and
     responsibilities, and to follow official lab practices and
     policies.
