minor typo corrections

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1342,10 +1342,10 @@ need access to RAPPORT then let \director~know.
       guidelines for authorship}.
   \item I agree to set up a beginning-of-term or end-of-term meeting
     with \director~at least once per term.
-  \item I have coordinated with \director~about getting added to the
-    weekly snippets Howdy script.
-
-  \item I have obtained access to the following lab calendars:
+  \item I am a paid lab member and have coordinated with
+    \director~about getting added to the weekly snippets Howdy script,
+    or I am an unpaid lab member.
+  \item I have access to the following lab calendars:
     Contextual Dynamics Lab, Out of lab, CDL Resources, CDL class
     schedule (if applicable), DHMC Meetings (if
     applicable), and PBS department events.
@@ -1367,17 +1367,16 @@ need access to RAPPORT then let \director~know.
     preference to not be included on the lab website.
   \item I agree to regularly attend lab meetings (unless I have a course
     conflict and have informed \director~or \coordinator).
-  \item I am either an unpaid or salaried employee, or I am an hourly
+  \item I am an unpaid or salaried employee, or I am an hourly
     employee and have gotten myself set up on Kronos to track my paid
     hours.
-
-  \item I agree to abide by the lab's Bill of rights and
+  \item I agree to abide by the lab's bill of rights and
     responsibilities, and to follow official lab practices and
     policies.
-  \item I have read and understood the entire lab manual, and have
+  \item I have carefully read through the entire lab manual, and I have
     checked off all of the above items to indicate that I have carried
     out the indicated tasks.
-  \item I agree to send a digital copy (PDF) of the final two pages of
+  \item I will send a digital copy (PDF) of the final two pages of
     this manual, including checked-off list items, my digital
     signature, and today's date, to \href{mailto:contextualdynamics@gmail.com}{contextualdynamics@gmail.com}.
 \end{todolist}
